<resources>
    <string name="app_name" translatable="false">lib</string>

    <string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button2_small_text" translatable="false">ABC</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="button3_small_text" translatable="false">DEF</string>
    <string name="button4_large_text" translatable="false">4</string>
    <string name="button4_small_text" translatable="false">GHI</string>
    <string name="button5_large_text" translatable="false">5</string>
    <string name="button5_small_text" translatable="false">JKL</string>
    <string name="button6_large_text" translatable="false">6</string>
    <string name="button6_small_text" translatable="false">MNO</string>
    <string name="button7_large_text" translatable="false">7</string>
    <string name="button7_small_text" translatable="false">PQRS</string>
    <string name="button8_large_text" translatable="false">8</string>
    <string name="button8_small_text" translatable="false">TUV</string>
    <string name="button9_large_text" translatable="false">9</string>
    <string name="button9_small_text" translatable="false">WXYZ</string>
    <string name="button11_large_text" translatable="false">0</string>
    <string name="button12_large_text" translatable="false">.</string>


    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>


    <string name="pin_code_forgot_text">Forgot?</string>
    <string name="pin_code_step_disable">Disable %d-digit Pincode</string>
    <string name="pin_code_step_create">Create a %d-digit Pincode</string>
    <string name="pin_code_step_change">Enter your current %d-digit Pincode</string>
    <string name="pin_code_step_unlock">Enter your %d-digit Pincode</string>
    <string name="pin_code_step_enable_confirm">Confirm your %d-digit Pincode</string>

    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="eth">YOUR ETHEREUM QR CODE</string>
    <string name="eth_add">YOUR ETHEREUM ADDRESS</string>
    <string name="amt_doller">$ 5976.47</string>
    <string name="amt_int">23.95764</string>
    <string name="eth_code">ETHEREUM BALANCE</string>
    <string name="buy_sell">BUY/SELL</string>
    <string name="receive">RECEIVE</string>
    <string name="send">SEND</string>

</resources>
